--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,9 @@
+/* Base - Variables: tailwind-config.js */
+@import "tailwindcss/preflight";
+@import "tailwindcss/components";
+/* Site Specific */
+@import "tailwindcss/utilities";
+@import "brand";
 /*! TACHYONS v4.5.5 | http://tachyons.io */
 
 /*
@@ -78,10 +84,3 @@
 @import './imports/_colors';
 @import './imports/_media-queries';
 @import './imports/_variables';
-
-/* Debugging */
-@import './imports/_debug-children';
-@import './imports/_debug-grid';
-
-/* Uncomment out the line below to help debug layout issues */
-/*@import './imports/_debug';*/
