--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,12 +1,49 @@
 {{ define "main" }}
 
-{{ partial "jumbotron" (dict "imageUrl" .Params.image "title" .Title "subtitle" .Params.subtitle) }}
+<header class="w-full h-screen relative overflow-hidden py-3 px-5 border-b-thick border-solid border-green-brand">
+    <img class="absolute l-0 t-0 h-auto" src={{ .Params.image }} />
+    <div class="flex justify-end">
+     {{ partial "logo" }}
+    </div>
+    <div class="flex justify-end">
+        <div class="pr-4 border-r-thick border-solid border-grey-lightest lg:w-1/2 sm:w-full items-end">
+            <h1 class="font-serif text-5xl text-grey-lightest text-right leading-none">
+                {{ .Params.title }}
+            </h1>
+            <div class="border-b-thick border-solid border-grey-lightest text-right text-grey-lightest text-xs pt-10 leading-tight">
+                <p><a href="/about-joshua-bradley">Joshua Bradley</a> is <a href="/posts">writing</a>, <a href='https://www.strava.com/athletes/airjoshb'>training</a> and brewing a hot beverage.
+                </br> Follow me at <a href="https://twitter.com/airjoshb">@airjoshb</a> and sign up for weekly updates.</p>
+            </div>
+            <svg height="20" width="20">
+                <circle cx="10" cy="10" r="8" stroke="transparent" fill="white"></circle>
+            </svg>
+        </div>
+        <nav class="relative p-3 lg:w-1/3 sm:w-full mt-auto text-grey-lightest text-xs">
+                <div class="text-right text-grey-lightest relative">
+                    <a href="">Now</a>
+                </div>
+                <div class="border-t-4 border-solid border-grey-lightest text-right text-brand-light relative">
+                        <a href="!#" class="cursor-not-allowed">Posts</a>
+                </div>
+            
+                <div class="border-t-4 border-solid border-grey-lightest text-right text-brand-light relative">
+                        <a href="!#" class="cursor-not-allowed">Essays</a>
+                </div>
+          
+                <div class="border-t-4 border-solid border-grey-lightest text-right text-grey-lightest relative">
+                        <a href="">About Joshua</a>
+                </div>
+            
+            </ul>
+        </nav>
+    </div>
+</header>
 
 {{ partial "short-text" .Params.blurb}}
 
 {{ partial "2-up" .Params }}
 
-{{ partial "text-and-image" (dict "heading" .Params.values.heading "text" .Params.values.text "buttonText" "Read more" "buttonLink" "/values") }}
+{{ partial "text-and-image" (dict "heading" .Params.about.heading "text" .Params.about.text "buttonText" "Read more" "buttonLink" "/about") }}
 
 {{ partial "blog" . }}
 
