--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -19,7 +19,7 @@
 				<ul class="mb3">
 					<li><a href="/" class="link">Home</a></li>
 					<li><a href="/products" class="link">Our products</a></li>
-					<li><a href="/values" class="link">About</a></li>
+					<li><a href="/about" class="link">About</a></li>
 					<li><a href="/post" class="link">Blog</a></li>
 					<li><a href="/contact" class="link">Contact</a></li>
 				</ul>
@@ -36,10 +36,7 @@
 			<div>
 				<h3 class="f4 b lh-title mb2 primary">Social media</h3>
 				<ul class="mhn2">
-					{{ partial "social-icon" (dict "link" "#" "svg" "icons-facebook") }}
-					{{ partial "social-icon" (dict "link" "#" "svg" "icons-twitter") }}
-					{{ partial "social-icon" (dict "link" "#" "svg" "icons-instagram") }}
-					{{ partial "social-icon" (dict "link" "#" "svg" "icons-vimeo") }}
+					{{ partial "social-icon" (dict "link" "https://twitter.com/airjoshb" "svg" "icons-twitter") }}
 				</ul>
 			</div>
 
