--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -11,7 +11,7 @@
                 {{ .Params.title }}
             </h1>
             <div class="border-b-thick border-solid border-grey-lightest text-right text-grey-lightest text-xs pt-10 leading-tight">
-                <p><a href="/about-joshua-bradley">Joshua Bradley</a> is <a href="/posts">writing</a>, <a href='https://www.strava.com/athletes/airjoshb'>training</a> and brewing a hot beverage.
+                <p><a href="/about">Joshua Bradley</a> is <a href="/post">writing</a>, <a href='https://www.strava.com/athletes/airjoshb' target="_blank">training</a> and brewing a hot beverage.
                 </br> Follow me at <a href="https://twitter.com/airjoshb">@airjoshb</a> and sign up for weekly updates.</p>
             </div>
             <svg height="20" width="20">
@@ -31,7 +31,7 @@
                 </div>
           
                 <div class="border-t-4 border-solid border-grey-lightest text-right text-grey-lightest relative">
-                        <a href="">About Joshua</a>
+                        <a href="/about">About Joshua</a>
                 </div>
             
             </ul>
