--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -3,7 +3,7 @@
 <header class="w-full h-screen relative overflow-hidden py-3 px-5 border-b-thick border-solid border-green-brand">
     <img class="absolute l-0 t-0 h-auto" src={{ .Params.image }} />
     <div class="flex justify-end">
-     {{ partial "logo" }}
+     {{ partial "logo" (dict "class" "fill-brand")  }}
     </div>
     <div class="flex justify-end">
         <div class="pr-4 border-r-thick border-solid border-grey-lightest lg:w-1/2 sm:w-full items-end">
@@ -11,8 +11,8 @@
                 {{ .Params.title }}
             </h1>
             <div class="border-b-thick border-solid border-grey-lightest text-right text-grey-lightest text-xs pt-10 leading-tight">
-                <p><a href="/about">Joshua Bradley</a> is <a href="/post">writing</a>, <a href='https://www.strava.com/athletes/airjoshb' target="_blank">training</a> and brewing a hot beverage.
-                </br> Follow me at <a href="https://twitter.com/airjoshb">@airjoshb</a> and sign up for weekly updates.</p>
+                <p><a href="/about">Joshua Bradley</a> is writing, <a href='https://www.strava.com/athletes/airjoshb' target="_blank">training</a> and brewing a hot beverage.
+                </br> Follow him at <a href="https://twitter.com/airjoshb">@airjoshb</a> and <a href="#thoughts">sign up</a> for weekly thoughts.</p>
             </div>
             <svg height="20" width="20">
                 <circle cx="10" cy="10" r="8" stroke="transparent" fill="white"></circle>
@@ -20,14 +20,14 @@
         </div>
         <nav class="relative p-3 lg:w-1/3 sm:w-full mt-auto text-grey-lightest text-xs">
                 <div class="text-right text-grey-lightest relative">
-                    <a href="">Now</a>
+                    <a href="#now">Now</a>
                 </div>
                 <div class="border-t-4 border-solid border-grey-lightest text-right text-brand-light relative">
-                        <a href="!#" class="cursor-not-allowed">Posts</a>
+                        <a href="#" class="cursor-not-allowed">Posts</a>
                 </div>
             
                 <div class="border-t-4 border-solid border-grey-lightest text-right text-brand-light relative">
-                        <a href="!#" class="cursor-not-allowed">Essays</a>
+                        <a href="#" class="cursor-not-allowed">Essays</a>
                 </div>
           
                 <div class="border-t-4 border-solid border-grey-lightest text-right text-grey-lightest relative">
@@ -38,13 +38,6 @@
         </nav>
     </div>
 </header>
-
-{{ partial "short-text" .Params.blurb}}
-
-{{ partial "2-up" .Params }}
-
-{{ partial "text-and-image" (dict "heading" .Params.about.heading "text" .Params.about.text "buttonText" "Read more" "buttonLink" "/about") }}
-
-{{ partial "blog" . }}
-
+{{ partial "update" . }}
+{{ partial "text-and-image" (dict "heading" .Params.about.heading "text" .Params.about.text "buttonText" "learn more" "buttonLink" "/about" "image" .Params.about.image) }}
 {{ end }}
