--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,50 +1,14 @@
-<footer class="bg-brand-light ph-3 pv-4 white">
-
-	<div class="mw7 center pt3">
-
-		<div class="measure-narrow center mb4">
-
-			<img src="/img/step-one-logo.svg" alt="Kaldi logo" class="db w4 center mb4 br0">
-			<p class="f3 lh-title light-gray b tc mb2">Newsletter subscribe</p>
-			<p>Get awesome news from us in your inbox every two weeks. Be the first to learn about new products.</p>
-
-			{{ partial "newsletter-form" . }}
-
+<footer class="bg-brand ph-3 py-4 my-4 white">
+		<div class="w-1/2 center ">
+			<div class="text-center p-4">{{ partial "icon" (dict "class" "fill-white") }}</div>
+			<div class="text-center">
+			<p>Get something in your inbox every week or two with thoughts and books about health, performance and entrepreneurship.</p>
+			<div class="m-auto"  id="thoughts">{{ partial "newsletter-form" . }}</div>
+			{{ partial "social-icon" (dict "link" "https://twitter.com/airjoshb" "svg" "icons-twitter") }}	
 		</div>
 
-		<div class="flex-ns justify-between">
-
-			<div>
-				<h3 class="f4 b lh-title mb1 primary">Kaldi</h3>
-				<ul class="mb3">
-					<li><a href="/" class="link">Home</a></li>
-					<li><a href="/products" class="link">Our products</a></li>
-					<li><a href="/about" class="link">About</a></li>
-					<li><a href="/post" class="link">Blog</a></li>
-					<li><a href="/contact" class="link">Contact</a></li>
-				</ul>
-			</div>
-
-			<div>
-				<h3 class="f4 b lh-title mb1 primary">Find out more</h3>
-				<ul class="mb3">
-					<li><a href="/post/jamaica-blue/" class="link">Latest offers</a></li>
-					<li><a href="/contact" class="link">Schedule and appointment</a></li>
-				</ul>
-			</div>
-
-			<div>
-				<h3 class="f4 b lh-title mb2 primary">Social media</h3>
-				<ul class="mhn2">
-					{{ partial "social-icon" (dict "link" "https://twitter.com/airjoshb" "svg" "icons-twitter") }}
-				</ul>
-			</div>
-
 		</div>
-	</div>
-
 </footer>
-
 {{ partial "svg" . }}
 
 <script src="/app.js"></script>
