--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -2,6 +2,9 @@
   <img class="absolute l-0 t-0 h-auto" src={{.imageUrl}} />
   
   <div class="relative w-full text-right">
+    <a href="/" class="w-4 h-4">
+    {{ partial "logo" (dict "class" "fill-white w-12 h-12")  }}
+    </a> 
     <h1 class="font-serif text-3xl white">
       {{.title}}
     </h1>
