--- a/site/layouts/partials/newsletter-form.html
+++ b/site/layouts/partials/newsletter-form.html
@@ -1,10 +1,8 @@
 <form name="newsletter" netlify class="mb-3">
-
-  <fieldset class="flex-auto" name="newsletter" action="newsletter-subscribe">
-    <input type="text" id="email" placeholder="Your email" class="w-100">
+  <fieldset class="inline-block" name="newsletter" action="newsletter-subscribe">
+    <input type="text-sm" id="email" placeholder="Your email" class="w-100 inline">
     <label for="email">Your email</label>
   </fieldset>
-
-  <button class="btn" type="submit">Submit</button>
+  <button class="bg-transparent hover:bg-brand-light text-sm text-brand-light font-semibold hover:text-brand py-2 px-4 border border-brand-light border-solid hover:border-transparent rounded" type="submit">Sign Up</button>
 
 </form>
