--- a/site/layouts/partials/social-icon.html
+++ b/site/layouts/partials/social-icon.html
@@ -1,6 +1,6 @@
 <li class="dib ph2 raise">
-  <a href="{{.link}}" class="link bg-white black db relative br-100 pa2">
-    <svg width="16px" height="16px" class="db">
+  <a href="{{.link}}" class="link bg-white db relative br-100 pa2">
+    <svg width="16px" height="16px" class="db fill-brand">
       <use xlink:href="#{{.svg}}"></use>
     </svg>
   </a>
