--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,24 +1,24 @@
 {{ define "main" }}
 
-<header class="w-full h-screen relative overflow-hidden py-3 px-5 border-b-thick border-solid border-green-brand">
-    <img class="absolute l-0 t-0 h-auto" src={{ .Params.image }} />
-    <div class="flex justify-end">
-     {{ partial "logo" (dict "class" "fill-brand")  }}
+<header class="main w-full h-screen relative overflow-hidden py-3 px-5 border-b-thick border-solid border-green-brand">
+    <img class="absolute l-0 t-0 h-auto image-header" src={{ .Params.image }} />
+    <div class="flex justify-end logo">
+     {{ partial "logo" (dict "class" "fill-brand h-42 w-42")  }}
     </div>
-    <div class="flex justify-end">
-        <div class="pr-4 border-r-thick border-solid border-grey-lightest lg:w-1/2 sm:w-full items-end">
+    <div class="flex justify-end header-content">
+        <div class="title pr-4 border-r-thick border-solid border-grey-lightest w-1/2 items-end">
             <h1 class="font-serif text-5xl text-grey-lightest text-right leading-none">
                 {{ .Params.title }}
             </h1>
             <div class="border-b-thick border-solid border-grey-lightest text-right text-grey-lightest text-xs pt-10 leading-tight">
-                <p><a href="/about">Joshua Bradley</a> is writing, <a href='https://www.strava.com/athletes/airjoshb' target="_blank">training</a> and brewing a hot beverage.
-                </br> Follow him at <a href="https://twitter.com/airjoshb">@airjoshb</a> and <a href="#thoughts">sign up</a> for weekly thoughts.</p>
+                <p><a href="#about">Joshua Bradley</a> is writing, <a href='https://www.strava.com/athletes/airjoshb' target="_blank">training</a> and brewing a hot beverage.
+                Follow him at <a href="https://twitter.com/airjoshb">@airjoshb</a> and <a href="#thoughts">sign up</a> for weekly thoughts.</p>
             </div>
-            <svg height="20" width="20">
+            <svg class="h-4" height="20" width="20">
                 <circle cx="10" cy="10" r="8" stroke="transparent" fill="white"></circle>
             </svg>
         </div>
-        <nav class="relative p-3 lg:w-1/3 sm:w-full mt-auto text-grey-lightest text-xs">
+        <nav class="home-nav relative p-3 w-1/3 mt-auto text-grey-lightest text-xs">
                 <div class="text-right text-grey-lightest relative">
                     <a href="#now">Now</a>
                 </div>
@@ -31,7 +31,7 @@
                 </div>
           
                 <div class="border-t-4 border-solid border-grey-lightest text-right text-grey-lightest relative">
-                        <a href="/about">About Joshua</a>
+                        <a href="#about">About Joshua</a>
                 </div>
             
             </ul>
@@ -39,5 +39,7 @@
     </div>
 </header>
 {{ partial "update" . }}
+<div id="about">
 {{ partial "text-and-image" (dict "heading" .Params.about.heading "text" .Params.about.text "buttonText" "learn more" "buttonLink" "/about" "image" .Params.about.image) }}
+</div>
 {{ end }}
