--- a/site/layouts/partials/text-and-image.html
+++ b/site/layouts/partials/text-and-image.html
@@ -3,7 +3,7 @@
 		<div class="lg:w-2/3">
 			<h2 class="font-bold text-xl text-brand">{{.heading}}</h2>
 
-			<p>{{.text}}</p>
+			{{.text}
 		</div>
 
 		<div class="lg:w-1/3">
