--- a/site/layouts/partials/text-and-image.html
+++ b/site/layouts/partials/text-and-image.html
@@ -11,8 +11,8 @@
 		</div>
 	</container>
 
-	<form action="{{.buttonLink}}">
+	<!-- <form action="{{.buttonLink}}">
 		<button class="bg-transparent hover:bg-brand text text-brand font-semibold hover:text-brand-light py-2 px-4 border border-brand border-solid hover:border-transparent rounded raise">{{.buttonText}}</a>
-	</form>
+	</form> -->
 
 </section>
