--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -40,6 +40,6 @@
 </header>
 {{ partial "update" . }}
 <div id="about">
-{{ partial "text-and-image" (dict "heading" .Params.about.heading "text" .Params.about.text "buttonText" "learn more" "buttonLink" "/about" "image" .Params.about.image) }}
+{{ partial "text-and-image" (dict "heading" .Params.about.heading "text" .Params.about.text "buttonText" "learn more" "image" .Params.about.image) }}
 </div>
 {{ end }}
