--- a/site/layouts/partials/text-and-image.html
+++ b/site/layouts/partials/text-and-image.html
@@ -2,11 +2,10 @@
 	<container class="flex">
 		<div class="lg:w-2/3">
 			<h2 class="font-bold text-xl text-brand">{{.heading}}</h2>
-
-			{{.text}
+			{{.text}}
 		</div>
 
-		<div class="lg:w-1/3">
+		<div class="lg:w-1/3 lg:ml-4">
 			<img src="{{ .image }}" alt="" class="rounded-full">
 		</div>
 	</container>
