--- a/site/layouts/partials/text-and-image.html
+++ b/site/layouts/partials/text-and-image.html
@@ -2,7 +2,7 @@
 	<container class="flex">
 		<div class="lg:w-2/3">
 			<h2 class="font-bold text-xl text-brand">{{.heading}}</h2>
-			{{.content}}
+			{{.text}}
 		</div>
 
 		<div class="lg:w-1/3 lg:ml-4">
