--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,10 +1,11 @@
 <footer class="bg-brand ph-3 py-4 my-4 white">
 		<div class="w-1/2 center ">
 			<div class="text-center p-4">{{ partial "icon" (dict "class" "fill-white") }}</div>
-			<div class="text-center">
+			<div class="text-center font-serif pb-2">
 			<p>Get something in your inbox every week or two with thoughts and books about health, performance and entrepreneurship.</p>
-			<div class="m-auto"  id="thoughts">{{ partial "newsletter-form" . }}</div>
+			<div class="m-auto pb-2"  id="thoughts">{{ partial "newsletter-form" . }}</div>
 			{{ partial "social-icon" (dict "link" "https://twitter.com/airjoshb" "svg" "icons-twitter") }}	
+			<p class="text-center text-sm font-serif pt-2">Please reach out by email, josh at gotostepone dot com</p>
 		</div>
 
 		</div>
