Update to mobile

--- a/site/layouts/partials/text-and-image.html
+++ b/site/layouts/partials/text-and-image.html
@@ -1,11 +1,11 @@
-<section class="py-6 px-6 lg:px-20">
+<section class="py-6 px-6 lg:px-20 text-image">
 	<container class="flex">
-		<div class="lg:w-2/3">
+		<div class="w-2/3 text">
 			<h2 class="font-bold text-xl text-brand">{{.heading}}</h2>
 			{{.text}}
 		</div>
 
-		<div class="lg:w-1/3 lg:ml-4">
+		<div class="m-4">
 			<img src="{{ .image }}" alt="" class="rounded-full">
 		</div>
 	</container>
