--- a/site/layouts/partials/update.html
+++ b/site/layouts/partials/update.html
@@ -1,9 +1,9 @@
 <div class="bg-grey-light py-4 flex flex-col h-auto justify-center items-center flex-wrap" id="now">
     {{ range first 8 (where .Data.Pages "Type" "update") }}
-    <div class="flex flex-row flex-no-shrink w-3/4 justify-center  mb-2 items-center">
-        <time class="text-xs italic mr-4">{{ .Date.Format "Monday ... 1pm" }}</time>
-        <div class="bg-grey-lightest rounded-lg p-4 w-3/4 update text-sm text-brand inline">
-            {{ if .Params.image }}<img src="{{ .Params.image }}" alt="{{ .Title }}" class="w-24 float-right inline" />{{ end }}        
+    <div class="flex flex-row flex-no-shrink w-3/4 justify-center  mb-2 items-center update">
+        <time class="text-xs italic mr-4 mb-2">{{ .Date.Format "Monday ... 1pm" }}</time>
+        <div class="bg-grey-lightest rounded-lg p-4 w-3/4 update text-sm text-brand">
+            {{ if .Params.image }}<img src="{{ .Params.image }}" alt="{{ .Title }}" class="w-24 ml-2 float-right inline" />{{ end }}        
 
             {{ .Content }}   
         </div>
