Google analytics code

--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -21,6 +21,17 @@
 	<meta property="og:type" content="business.business">
 	<meta property="og:title" content="Go to step one with Joshua Bradley">
 	<meta property="og:url" content="/">
-	<meta property="og:image" content="/img/og-image.jpg">
+	<meta property="og:image" content="/img/step-one-logo.svg">
 	<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-41484403-1"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'UA-41484403-1');
+	</script>
+
 </head>
