add view for updates

--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   {{ partial "head" . }}
-  <body class="font-sans">
+  <body class="font-sans bg-grey-light">
     {{ block "main" . }}{{ end }} 
     {{ partial "footer" . }} 
   </body>
