--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -1,7 +1,7 @@
 <head>
 
 	<title>{{ .Title }} | Joshua Bradley</title>
-	<link rel="stylesheet" href="css/main.css" />
+	<link rel="stylesheet" href="/css/main.css" />
 
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -17,11 +17,38 @@
 	<link rel="mask-icon" href="/img/safari-pinned-tab.svg" color="#ff4400">
 	<meta name="theme-color" content="#fff">
 
-	<!-- Open Graph -->
-	<meta property="og:type" content="business.business">
-	<meta property="og:title" content="Go to step one with Joshua Bradley">
-	<meta property="og:url" content="/">
-	<meta property="og:image" content="/img/step-one-logo.svg">
+	<!-- Start of Open Graph -->
+	<meta property="og:title" content="{{ .Title }}">
+	{{ if .IsPage }}
+	<meta property="og:type" content="article">
+	<meta property="article:published_time" content="{{ .Date.Format "2006-01-02" }}">
+	{{ else }}
+	<meta property="og:type" content="website">
+	{{ end }}
+	{{ if .Params.description }}
+	<meta property="og:description" content="{{ .Description }}">
+	{{ else }}
+	<meta property="og:description" content="{{ .Content | truncate 300 }}">
+	{{ end }}
+	<meta property="og:url" content="{{ .Permalink }}">
+	<meta property="og:site_name" content="{{ .Site.Title }}">
+	{{ if .Params.image }}
+	<meta property="og:image" content="{{ .Site.BaseURL }}{{ .Params.image }}">
+	{{ end }}
+	<!-- End of Open Graph -->
+	<!-- Start of Twitter -->
+
+	<meta property="twitter:card" content="{{ .Title }}">
+	{{ if .Params.description }}
+	<meta property="twitter:description" content="{{ .Description }}">
+	{{ else }}
+	<meta property="twitter:descriptionn" content="{{ .Content | truncate 300 }}">
+	{{ end }}
+	<meta property="twitter:title" content="{{ .Title }}">
+	{{ if .Params.image }}
+	<meta property="twitter:image" content="{{ .Site.BaseURL }}{{ .Params.image }}">
+	{{ end }}
+	<!-- End of Twitter -->
 	<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
