fix to metadata

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -11,8 +11,8 @@
                 {{ .Params.title }}
             </h1>
             <div class="border-b-thick border-solid border-grey-lightest text-right text-grey-lightest text-xs pt-10 leading-tight">
-                <p><a href="#about">Joshua Bradley</a> is writing, <a href='https://www.strava.com/athletes/airjoshb' target="_blank">training</a> and brewing a hot beverage.
-                Follow him at <a href="https://twitter.com/airjoshb">@airjoshb</a> and <a href="#thoughts">sign up</a> for weekly thoughts.</p>
+                <p><a href="#about">Joshua Bradley</a> is writing, <a href='https://www.strava.com/athletes/airjoshb' target="_blank">training</a> and brewing something hot.</p>
+                <p>Follow him at <a href="https://twitter.com/airjoshb" target="_blank">@airjoshb</a> and <a href="#thoughts">sign up</a> for weekly thoughts.</p>
             </div>
             <svg class="h-4" height="20" width="20">
                 <circle cx="10" cy="10" r="8" stroke="transparent" fill="white"></circle>
