--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -32,9 +32,9 @@
 	{{ end }}
 	<meta property="og:url" content="{{ .Permalink }}">
 	<meta property="og:site_name" content="{{ .Site.Title }}">
-	{{ if .Params.image }}
-	<meta property="og:image" content="{{ .Site.BaseURL }}{{ .Params.image }}">
-	{{ end }}
+	{{ with .Site.Params.images }}
+    <meta property="og:image" content="{{ index . 0 | absURL }}" >
+ 	{{ end }}
 	<!-- End of Open Graph -->
 	<!-- Start of Twitter -->
 
