--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -32,7 +32,7 @@
 	{{ end }}
 	<meta property="og:url" content="{{ .Permalink }}">
 	<meta property="og:site_name" content="{{ .Site.Title }}">
-	{{ with .Site.Params.images }}
+	{{ with .Params.images }}
     <meta property="og:image" content="{{ index . 0 | absURL }}" >
  	{{ end }}
 	<!-- End of Open Graph -->
