--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -32,24 +32,21 @@
 	{{ end }}
 	<meta property="og:url" content="{{ .Permalink }}">
 	<meta property="og:site_name" content="{{ .Site.Title }}">
-	{{ with .Params.images }}
-    <meta property="og:image" content="{{ index . 0 | absURL }}" >
- 	{{ end }}
+	{{ if .Params.image }}
+	<meta property="og:image" content="{{ .Params.image | absURL }}">
+	{{ end }}
 	<!-- End of Open Graph -->
 	<!-- Start of Twitter -->
-
 	<meta property="twitter:card" content="summary">
 	<meta property="twitter:creator" content="@airjoshb">
 	<!-- End of Twitter -->
 	<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-41484403-1"></script>
 	<script>
 	window.dataLayer = window.dataLayer || [];
 	function gtag(){dataLayer.push(arguments);}
 	gtag('js', new Date());
-
 	gtag('config', 'UA-41484403-1');
 	</script>
 
