--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -33,7 +33,7 @@
 	<meta property="og:url" content="{{ .Permalink }}">
 	<meta property="og:site_name" content="{{ .Site.Title }}">
 	{{ if .Params.image }}
-	<meta property="og:image" content="{{ .Params.image | absURL }}">
+	<meta property="og:image" content="{{ .Site.BaseURL }}{{ .Params.image }}">
 	{{ end }}
 	<!-- End of Open Graph -->
 	<!-- Start of Twitter -->
