update mobile changes

--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -1,6 +1,6 @@
-<div class="w-1/6 p-4 float-right text-right flex flex-col">
+<div id="sidebar-nav" class="w-1/6 p-4 text-right flex flex-col">
     <div class="logo">
-        <a href="/">
+        <a href="/" class="shadow-none hover:shadow-none">
             {{ partial "logo" (dict "class" "fill-brand h-24 w-24")  }}
         </a>
     </div>
