--- a/site/layouts/update/single.html
+++ b/site/layouts/update/single.html
@@ -1,36 +1,35 @@
 {{ define "main" }}
-  {{ partial "nav"}}
-  <div class="w-3/4 m-auto overflow-hidden bg-white shadow-lg px-5 pt-8 pb-4">
-    <div class="mb-8 flex justify-between items-end">
-      <h1 class="font-serif text-brand text-5xl">{{.Title}}</h1>
-
-      {{ if .Params.image }}<img src="{{ .Params.image }}" alt="{{ .Title }}" class="w-3/5" />{{ end }}
-    </div>
-    <div class="flex flex-row">
-      <div class="text-brand w-1/4 mr-1 text-xs  font-serif">
-        {{ .Date.Format "Monday, January 2, 2006" }}
-        </br>
-        Read in {{ .ReadingTime }} minutes
-        <div class="">
-          Share on
-          <a href="//twitter.com/share?url={{ .Permalink }}&amp;text=I%20just%20saw%20this&amp;via=airjoshb" target="_blank" class="inline-block shadow-none align-middle">
-            <svg width="16px" height="16px" class="db fill-brand inline">
-              <use xlink:href="#icons-twitter"></use>
+  <div class="flex" id="update">
+    <div class="w-3/4 m-auto overflow-hidden bg-white shadow-lg px-5 pt-8 pb-4" id="post">
+      <div class="mb-8 flex justify-between items-end">
+        <h1 class="font-serif text-brand text-5xl leading-none mb-0">{{.Title}}</h1>
+        {{ if .Params.image }}<img src="{{ .Params.image }}" alt="{{ .Title }}" class="w-3/5 pl-2" />{{ end }}
+      </div>
+      <div class="flex flex-row" id="content">
+        <div class="text-brand w-1/4 mr-1 text-xs  font-serif" id="colophon">
+          {{ .Date.Format "Monday, January 2, 2006" }}
+          <div class="">
+            Share on
+            <a href="//twitter.com/share?url={{ .Permalink }}&amp;text=I%20just%20saw%20this&amp;via=airjoshb" target="_blank" class="inline-block shadow-none align-middle">
+              <svg width="16px" height="16px" class="db fill-brand inline">
+                <use xlink:href="#icons-twitter"></use>
+              </svg>
+            </a>
+          </div>
+          <div class="text-right mt-2 border-t-4 pt-2 border-solid border-brand">      
+            <svg class="h-4" height="20" width="20">
+              <circle cx="10" cy="10" r="8" stroke="transparent" fill="brand"></circle>
             </svg>
-          </a>
+          </div>
         </div>
-        <div class="text-right mt-2 border-t-4 pt-2 border-solid border-brand">      
-          <svg class="h-4" height="20" width="20">
+        <div class="w-3/4 text-sm border-l-thick border-solid border-brand pl-4" id="body">
+          {{ .Content }}
+          <svg class="h-4 float-right text-brand" height="20" width="20">
             <circle cx="10" cy="10" r="8" stroke="transparent" fill="brand"></circle>
           </svg>
         </div>
       </div>
-      <div class="w-3/4 text-sm border-l-thick border-solid border-brand pl-4">
-        {{ .Content }}
-        <svg class="h-4 float-right text-brand" height="20" width="20">
-          <circle cx="10" cy="10" r="8" stroke="transparent" fill="brand"></circle>
-        </svg>
-      </div>
     </div>
+    {{ partial "nav"}}
   </div>
 {{ end }}
