--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -5,9 +5,9 @@
 			<p>Get something in your inbox every week or two with thoughts and books about health, performance and entrepreneurship.</p>
 			<div class="m-auto pb-2"  id="thoughts">{{ partial "newsletter-form" . }}</div>
 			{{ partial "social-icon" (dict "link" "https://twitter.com/airjoshb" "svg" "icons-twitter") }}	
-			<p class="text-center text-sm font-serif pt-2">Please reach out by email, josh at gotostepone dot com</p>
-		</div>
-
+			<p class="text-center text-sm font-serif pt-2">Please reach out by email, josh at gotostepone dot com</p>		
+			<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a>	
+			</div>	
 		</div>
 </footer>
 {{ partial "svg" . }}
