--- a/site/layouts/_default/li.html
+++ b/site/layouts/_default/li.html
@@ -1,6 +1,17 @@
-<a href="{{ .Permalink }}" class="no-underline pa3 bg-grey-1 br1 mb2 db raise w-100">
-	<h2 class="f3 b lh-title mb1 primary">{{ .Title }}</h2>
-	<p class="mid-gray lh-title mb2">{{ .Date.Format "Mon, Jan 2, 2006" }}</p>
-	<p class="mb0">{{ .Description }}</p>
-	<p class="link b dib black mb0">Read more →</p>
+<a href="{{ .Permalink }}" class="shadow-none">
+	<div class="flex h-64 no-underline w-64 justify-end mb-8">
+		{{ if .Params.image }}
+			<div class="h-64 overflow-hidden relative inline-block outline-none border-none shadow-lg hover:shadow-none">
+				<img src="{{ .Params.image }}" />
+			</div>
+			<div class="title">	
+				<h2 class="text-3xl font-serif capitalize font-bold text-brand">{{ .Title }}</h2>
+			</div>
+		{{ else }}
+			<div class="title-sans-image">	
+				<h2 class="font-serif capitalize font-bold text-brand">{{ .Title }}</h2>
+			</div>
+		{{ end }}
+	</div>
+	{{ if .Description }}<div class="border-t-8  border-solid border-green-brand"><h5 class="text-md w-48 mt-2 font-serif italic text-brand"><svg class="inline h-5 mr-1 align-middle green-brand" height="20" width="20"><circle cx="10" cy="10" r="8" stroke="transparent" fill="brand"></circle></svg>{{ .Description }}</h5></div>{{ end }}
 </a>
