--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -3,41 +3,41 @@
 <header class="main w-full h-screen relative overflow-hidden py-3 px-5 border-b-thick border-solid border-green-brand">
     <img class="absolute l-0 t-0 h-auto image-header" src={{ .Params.image }} />
     <div class="flex justify-end logo">
-     {{ partial "logo" (dict "class" "fill-brand h-42 w-42")  }}
+     {{ partial "logo" (dict "class" "fill-brand h-64 w-64")  }}
     </div>
     <div class="flex justify-end header-content">
         <div class="title pr-4 border-r-thick border-solid border-grey-lightest w-1/2 items-end">
             <h1 class="font-serif text-5xl text-grey-lightest text-right leading-none">
                 {{ .Params.title }}
             </h1>
-            <div class="border-b-thick border-solid border-grey-lightest text-right text-grey-lightest text-xs pt-10 leading-tight">
-                <p class="mb-0"><a href="#about">Joshua Bradley</a> is writing, <a href='https://www.strava.com/athletes/airjoshb' target="_blank">training</a> and brewing something hot.</p>
-                <p>Follow him at <a href="https://twitter.com/airjoshb" target="_blank">@airjoshb</a> and <a href="#thoughts">sign up</a> for weekly thoughts.</p>
+            <div class="font-serif font-medium italic border-b-thick border-solid border-grey-lightest text-right text-grey-lightest text-lg pt-5 leading-normal">
+                <p class="mb-0 "><a href="#about">Joshua</a> is <a href='https://levered.com' target="_blank">working on math</a>, writing, <a href='https://www.strava.com/athletes/airjoshb' target="_blank">training</a> and drinking coffee.
+                <a href="#thoughts">Sign up</a> for thoughts on entrepreneurship, health and human potential. Follow him at <a href="https://twitter.com/airjoshb" target="_blank">@airjoshb</a>.</p>
             </div>
-            <svg class="h-4" height="20" width="20">
+            <svg class="h-5" height="20" width="20">
                 <circle cx="10" cy="10" r="8" stroke="transparent" fill="white"></circle>
             </svg>
         </div>
-        <nav class="home-nav relative p-3 w-1/3 mt-auto text-grey-lightest text-xs">
-            <div class="text-right text-grey-lightest relative">
-                <a href="#now">Now</a>
+        <nav class="home-nav relative p-3 w-1/3 mt-auto text-grey-lightest text-lg">
+            <div class="text-right py-1 text-grey-lightest relative">
+                <a href="#now" class="font-black">Now</a>
             </div>
-            <div class="border-t-4 border-solid border-grey-lightest text-right text-brand-light relative">
-                    <a href="#" class="cursor-not-allowed">Posts</a>
-            </div>
-        
-            <div class="border-t-4 border-solid border-grey-lightest text-right text-brand-light relative">
-                    <a href="#" class="cursor-not-allowed">Essays</a>
+            <div class="border-t-4 border-solid border-grey-lightest text-right text-brand-light relative py-1">
+                    <a href="#" class="cursor-not-allowed font-black">Posts</a>
             </div>
         
-            <div class="border-t-4 border-solid border-grey-lightest text-right text-grey-lightest relative">
-                    <a href="#about">About Joshua</a>
+            <div class="border-t-4 border-solid border-grey-lightest text-right text-brand-light relative py-1">
+                    <a href="#" class="cursor-not-allowed font-black">Essays</a>
+            </div>
+        
+            <div class="border-t-4 border-solid border-grey-lightest text-right text-grey-lightest relative py-1">
+                    <a href="#about" class="font-black">About Joshua</a>
             </div>
         </nav>
     </div>
 </header>
 {{ partial "update" . }}
-<div id="about">
-{{ partial "text-and-image" (dict "heading" .Params.about.heading "text" .Params.about.text "buttonText" "learn more" "image" .Params.about.image) }}
-</div>
+<section id="about" class="bg-white p-8">
+{{ partial "text-and-image" (dict "heading" .Params.about.heading "text" .Params.about.text "image" .Params.about.image "imageclass" "rounded-full w-2/3" "headingclass" "font-bold text-3xl font-serif text-brand capitalize" "textclass" "text-lg leading-normal") }}
+</section>
 {{ end }}
