--- a/site/layouts/partials/newsletter-form.html
+++ b/site/layouts/partials/newsletter-form.html
@@ -1,8 +1,6 @@
-<form name="newsletter" netlify class="mb-3">
+<form name="newsletter" netlify class="my-3">
   <fieldset class="inline-block" name="newsletter" action="newsletter-subscribe">
-    <input type="email" name="email" placeholder="Your email" class="w-100 text-sm inline mb-2">
-    <label for="email">Your email</label>
+    <input type="email" name="email" placeholder="Your email" class="w-full inline px-4 py-2 rounded">
   </fieldset>
-  <button class="bg-transparent hover:bg-brand-light text-sm text-brand-light font-semibold hover:text-brand py-2 px-4 border border-brand-light border-solid hover:border-transparent rounded" type="submit">Sign Up</button>
-
+  <button class="bg-transparent hover:bg-brand-light text text-brand-light font-semibold hover:text-brand py-2 px-4 border border-brand-light border-solid hover:border-transparent rounded ml-2" type="submit">Sign Up</button>
 </form>
