--- a/site/layouts/partials/social-icon.html
+++ b/site/layouts/partials/social-icon.html
@@ -1,6 +1,6 @@
-<li class="dib ph2 raise">
-  <a href="{{.link}}" class="link bg-white db relative br-100 pa2">
-    <svg width="16px" height="16px" class="db fill-brand">
+<li class="inline-block">
+  <a href="{{.link}}" class="px-2 pt-2 pb-3 link bg-white rounded-full relative">
+    <svg width="24px" height="22px" class="fill-brand align-middle">
       <use xlink:href="#{{.svg}}"></use>
     </svg>
   </a>
