--- a/site/layouts/partials/update.html
+++ b/site/layouts/partials/update.html
@@ -1,7 +1,7 @@
 <div class="bg-grey-light py-4 flex flex-col h-auto justify-center items-center flex-wrap" id="now">
     {{ range first 8 (where .Data.Pages "Type" "update") }}
     <div class="flex flex-row flex-no-shrink w-3/4 mb-2 items-center update">
-        <div class="text-brand text-brand text-xs font-serif text-xs italic text-center mr-4">
+        <div class="text-brand text-brand text-lg font-serif italic text-center mr-4">
             <time class="mb-2">{{ .Date.Format "Monday ... 1pm" }}</time> 
         </br>  
             <a href="//twitter.com/share?url={{ .Permalink }}&amp;text=I%20just%20saw%20this&amp;via=airjoshb" target="_blank" class="inline-block shadow-none align-middle">
@@ -12,7 +12,7 @@
                 ~  
                 <a href="{{ .Permalink }}" class=" shadow-none hover:shadow-none hover:text-green-brand">link</a>
             </div>
-        <div class="bg-grey-lightest rounded-lg p-4 w-3/4 update text-sm text-brand">
+        <div class="bg-grey-lightest rounded-lg p-4 w-3/4 update text-lg leading-normal text-brand font-serif">
             {{ if .Params.image }}<img src="{{ .Params.image }}" alt="{{ .Title }}" class="w-1/2 ml-2 mb-2 float-right inline" />{{ end }}        
             {{ .Content }}  
         </div>
