--- a/site/layouts/post/single.html
+++ b/site/layouts/post/single.html
@@ -1,15 +1,38 @@
 {{ define "main" }}
-
-  <div class="mw6 center ph3 pv4">
-    <h1 class="f2 lh-title b mb3">{{.Title}}</h1>
-    <div class="flex justify-between grey-3">
-      <p>{{ .Date.Format "Mon, Jan 2, 2006" }}</p>
-      <p>Read in {{ .ReadingTime }} minutes</p>
+  <div class="flex" id="blog">
+    <div class="w-3/4 m-auto overflow-hidden bg-white shadow-lg px-5 pt-8 pb-4" id="post">
+      <div class="mb-8 flex items-end">
+        {{ if .Params.image }}<img src="{{ .Params.image }}" alt="{{ .Title }}" class="w-3/5 border-r-8 border-solid border-green-brand" />{{ end }}
+        <div class="ml-3">
+          <h1 class="font-serif text-brand leading-none mb-0 flex-shrink flex-no-grow">{{.Title}}</h1>
+          <h2 class="font-serif text-brand text-lg italic font-hairline">{{ .Description }}</h2></div>
+        </div>
+      <div class="flex flex-row" id="content">
+        <div class="text-brand w-1/4 mr-1 italic text-sm font-serif" id="colophon">
+          {{ .Date.Format "Monday, January 2, 2006" }}
+          <p>Read in {{ .ReadingTime }} minutes</p>
+          <div class="">
+            Share on
+            <a href="//twitter.com/share?url={{ .Permalink }}&amp;text=I%20just%20saw%20this&amp;via=airjoshb" target="_blank" class="inline-block shadow-none align-middle hover:shadow-none">
+              <svg width="16px" height="16px" class="db fill-brand inline">
+                <use xlink:href="#icons-twitter"></use>
+              </svg>
+            </a>
+          </div>
+          <div class="text-right mt-2 border-t-4 pt-2 border-solid border-green-brand">      
+            <svg class="h-5 green-brand" height="20" width="20">
+              <circle cx="10" cy="10" r="8" stroke="transparent" fill="brand"></circle>
+            </svg>
+          </div>
+        </div>
+        <div class="w-3/4 leading-normal text-lg border-l-thick border-solid border-green-brand pl-4" id="body">
+          {{ .Content }}
+          <svg class="h-5 float-right green-brand" height="20" width="20">
+            <circle cx="10" cy="10" r="8" stroke="transparent" fill="brand"></circle>
+          </svg>
+        </div>
+      </div>
     </div>
-    <div class="cms mw6">
-      <p>{{ .Description }}</p>
-      {{ if .Params.image }}<img src="{{ .Params.image }}" alt="{{ .Title }}" />{{ end }}
-      {{ .Content }}
-    </div>
+    {{ partial "nav"}}
   </div>
 {{ end }}
