--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -1,12 +1,12 @@
 <div id="sidebar-nav" class="w-1/6 p-4 text-right flex flex-col flex-no-shrink">
-    <div class="logo">
+    <div class="logo mb-4">
         <a href="/" class="shadow-none hover:shadow-none">
             {{ partial "logo" (dict "class" "fill-brand h-32 w-32")  }}
         </a>
     </div>
     <nav id="main" class="w-full text-right text-lg">
         <div class="border-t-4 border-solid border-brand text-brand-green relative py-1">
-                <a href="#" class="cursor-not-allowed font-black">Posts</a>
+                <a href="/post" class="font-black">Posts</a>
         </div>
 
         <div class="border-t-4 border-solid border-brand text-brand-green relative py-1">
