--- a/site/layouts/_default/list.html
+++ b/site/layouts/_default/list.html
@@ -1,10 +1,10 @@
 {{ define "main" }}
-<div class="flex justify-end">
+<div class="flex justify-end" id="list">
   <div class="p-4">
     <div class="mb-16">
       {{ range first 1 .Pages.ByPublishDate.Reverse }}  
         <a href="{{ .Permalink }}" class="shadow-none hover:shadow-none">
-          {{ partial "text-and-image" (dict "heading" .Title "text" .Description "image" .Params.Image "imageclass" "shadow-lg hover:shadow-none border-r-8  border-solid border-green-brand" "textclass" "leading-tight mt-1 font-serif text-lg italic" "headingclass" "font-bold leading-none text-5xl font-serif text-brand capitalize") }}
+          {{ partial "text-and-image" (dict "heading" .Title "text" .Description "image" .Params.Image "imageclass" "shadow-lg hover:shadow-none border-r-8 h-64i border-solid border-green-brand" "textclass" "leading-tight mt-1 font-serif text-lg italic" "headingclass" "font-bold leading-none text-5xl font-serif text-brand capitalize") }}
         </a>
       {{ end }}
     </div>
