--- a/site/layouts/partials/text-and-image.html
+++ b/site/layouts/partials/text-and-image.html
@@ -1,6 +1,6 @@
 <section class="p-2 text-image">
-	<container class="flex items-center justify-center">
-		<div>
+	<container class="flex justify-center">
+		<div class="overflow-hidden">
 			<img src="{{ .image }}" alt="" class="{{ .imageclass }}">
 		</div>
 		<div class="text w-1/2 flex-grow flex-no-shrink ml-4">
