--- a/site/layouts/_default/li.html
+++ b/site/layouts/_default/li.html
@@ -4,14 +4,14 @@
 			<div class="h-64 overflow-hidden relative inline-block outline-none border-none shadow-lg hover:shadow-none">
 				<img src="{{ .Params.image }}" />
 			</div>
-			<div class="title">	
+			<div class="title mb-2 text-right">	
 				<h2 class="text-3xl font-serif capitalize font-bold text-brand">{{ .Title }}</h2>
 			</div>
 		{{ else }}
-			<div class="title-sans-image">	
+			<div class="title-sans-image self-end">	
 				<h2 class="font-serif capitalize font-bold text-brand">{{ .Title }}</h2>
 			</div>
 		{{ end }}
 	</div>
-	{{ if .Description }}<div class="border-t-8  border-solid border-green-brand"><h5 class="text-md w-64 mt-2 font-serif text-sm text-justify font-thin italic text-brand"><svg class="inline h-5 mr-1 align-middle green-brand" height="20" width="20"><circle cx="10" cy="10" r="8" stroke="transparent" fill="brand"></circle></svg>{{ .Description }}</h5></div>{{ end }}
+	{{ if .Description }}<div class=""><h5 class="border-t-8 border-solid border-green-brand text-md w-64 font-serif text-sm text-justify font-thin italic text-brand pt-2"><svg class="inline h-4 mr-1 align-middle green-brand" height="15" width="15"><circle cx="7.5" cy="7.5" r="6.5" stroke="transparent" fill="brand"></circle></svg>{{ .Description }}</h5></div>{{ end }}
 </a>
